--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <div class="content">
             <ul>
             	<li>Using internal tooling, manually created polygons for venues in Foursquare databases to capture and assess location data.</li>
-				<li>Improved the machine learning model used in two consumer applications, Foursquare City Guide & Swarm.</li>
+				<li>Improved the machine learning model used in two consumer applications, Foursquare <a href="https://foursquare.com/download" class="has-text-info">City Guide</a> & <a href="https://www.swarmapp.com/" class="has-text-info">Swarm</a>.</li>
 				<li>Conducted ad hoc analyses for partner companies utilizing Foursquare location SDK technology, to include Uber, Tinder, and Airbnb.</li>
 
             </ul>
@@ -166,7 +166,7 @@
           </div>           
             <div class="level-item has-text-centered">
               <div>
-                  <a href="https://www.linkedin.com/in/ricky-shin" class="icon is-large, has-text-info" >
+                  <a href="https://www.linkedin.com/in/ricky-shin" class="icon is-large, has-text-info">
                     <i class="fab fa-2x fa-linkedin-in"></i>
                   </a>
                   <p class="heading"><a href="https://www.linkedin.com/in/ricky-shin" class="has-text-info">/ricky-shin</a></p>
