Coursework Update (index.html)

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               Ricky Shin
             </h1>
             <h2 class="subtitle">
-              Comp Sci Student
+              Computer Science Student
             </h2>
           </div>
         </div>
@@ -62,10 +62,9 @@
           </div>
           <div class="content">
             <ul>
-              <li>Pursuing the <a href="http://www.cs.columbia.edu/education/ms/softwaresystems/" class="has-text-info">Software Systems</a> track.</li>
               <li>Relevant Coursework:</li>
               <ul>
-              	<li>To Be Updated</li>
+              	<li>COMS W1004 - Introduction to Computer Science and Programming in Java (in progress)/li>
               </ul>
             </ul>
           </div>
