--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
             <div class="media-content">
               <p class="title is-4">Columbia University</p>
-              <p class="subtitle is-6">Bachelor of Arts, Computer Science (Expected Spring 2023)</p>
+              <p class="subtitle is-6">Bachelor of Arts, Computer Science (Expected Fall 2022)</p>
             </div>
           </div>
           <div class="content">
