--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <ul>
               <li>Relevant Coursework:</li>
               <ul>
-              	<li>COMS W1004 - Introduction to Computer Science and Programming in Java (in progress)/li>
+              	<li>COMS W1004 - Introduction to Computer Science and Programming in Java (in progress)</li>
               </ul>
             </ul>
           </div>
