--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
               <li>Relevant Coursework:</li>
               <ul>
               	<li>COMS W1004 - Introduction to Computer Science and Programming in Java (in progress)</li>
+		<li>COMS W4111 - Introduction to Databases</li>
               </ul>
             </ul>
           </div>
