--- a/index.html
+++ b/index.html
@@ -244,12 +244,13 @@
         </p>
 
         <div class="content">
-        	<center><p><a href="https://github.com/ricky-shin/bulpa">Github</a> | <a href="https://www.bulpa.info/">Live Link</a>
+        	<center><p><a href="https://github.com/ricky-shin/bulpa">Github</a>
         	<br /> <span class="tag">PHP</span> <span class="tag">MySQL</span> <span class="tag">Bootstrap</span>
         	</p></center>
         	<ul>
         		<li>A web application that allows users to anonymously submit reviews for courses and professors at Baruch College. These reviews are then pushed and stored on a MySQL database.</li>
-				<li>Reviews are displayed by querying the MySQL database, showing relevant content to users.</li>
+			<li>Reviews are displayed by querying the MySQL database, showing relevant content to users.</li>
+			<li>Over 9,500 pages viewed, with 940+ users submitting 200+ anonymous reviews within 5 months.</li>
 
         	</ul>
         </div>
