--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
           </div>
           <div class="content">
             <ul>
-            	<li>Using internal tooling, manually created polygons for venues in Foursquare databases to capture and assess location data.</li>
-				<li>Improved the machine learning model used in two consumer applications, Foursquare <a href="https://foursquare.com/download" class="has-text-info">City Guide</a> & <a href="https://www.swarmapp.com/" class="has-text-info">Swarm</a>.</li>
+            			<li>Working under the Engineering department, improved machine learning models by creating training sets.</li>
+				<li>QA tested two consumer facing applications: Foursquare <a href="https://foursquare.com/download" class="has-text-info">City Guide</a> and <a href="https://www.swarmapp.com/" class="has-text-info">Swarm</a>, most notably in preparation for iOS 13.</li>
 				<li>Conducted ad hoc analyses for partner companies utilizing Foursquare location SDK technology, to include Uber, Tinder, and Airbnb.</li>
 
             </ul>
@@ -118,7 +118,8 @@
             <ul>
             	<li>Achieved the rank of Specialist (E-4) before being discharged from active duty.</li>
 				<li>Managed a team of three junior communication operators, providing guidance and mentorship by evaluating performance on a monthly basis.</li>
-				<li>Operated and maintained military-grade radios transmitting classified information, in support of missions conducted throughout Southeastern United States.</li>
+				<li>Operated and maintained military-grade radios transmitting classified information, in support of Operation Inherent Resolve.</li>
+		    		<li>As a certified Combat Lifesaver, performed duties as an intermediary medic responsible for administering advanced life support to 120 troops within the company.</li>
             </ul>
           </div>
         </div>
