--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
             <ul>
             	<li>Achieved the rank of Specialist (E-4) before being discharged from active duty.</li>
 				<li>Managed a team of three junior communication operators, providing guidance and mentorship by evaluating performance on a monthly basis.</li>
-				<li>Operated and maintained military-grade radios transmitting classified information, in support of <a href="https://en.wikipedia.org/wiki/Operation_Inherent_Resolve">Operation Inherent Resolve</a>.</li>
-		    		<li>As a certified <a href="https://en.wikipedia.org/wiki/Combat_lifesaver_course">Combat Lifesaver</a>, performed duties as an intermediary medic responsible for administering advanced life support to 120 troops within the company.</li>
+				<li>Operated and maintained military-grade radios transmitting classified information, in support of <a href="https://en.wikipedia.org/wiki/Operation_Inherent_Resolve" class="has-text-info">Operation Inherent Resolve</a>.</li>
+		    		<li>As a certified <a href="https://en.wikipedia.org/wiki/Combat_lifesaver_course" class="has-text-info">Combat Lifesaver</a>, performed duties as an intermediary medic responsible for administering advanced life support to 120 troops within the company.</li>
             </ul>
           </div>
         </div>
