Awards on Army Experience
Slight clean up, added awards earned throughout service

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="css/main.bundle.css">
+  <link rel="stylesheet" href="css/tooltip.css">
   <script src="https://kit.fontawesome.com/4e5a72c756.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153653921-1"></script>
@@ -65,7 +66,7 @@
               <li>Relevant Coursework:</li>
               <ul>
               	<li>COMS W1004 - Introduction to Computer Science and Programming in Java (in progress)</li>
-		<li>COMS W4111 - Introduction to Databases</li>
+		            <li>COMS W4111 - Introduction to Databases</li>
               </ul>
             </ul>
           </div>
@@ -94,9 +95,8 @@
           <div class="content">
             <ul>
             			<li>Working under the Engineering department, improved machine learning models by creating training sets.</li>
-				<li>QA tested two consumer facing applications: Foursquare <a href="https://foursquare.com/download" class="has-text-info">City Guide</a> and <a href="https://www.swarmapp.com/" class="has-text-info">Swarm</a>, most notably in preparation for iOS 13.</li>
-				<li>Conducted ad hoc analyses for partner companies utilizing Foursquare location SDK technology, to include Uber, Tinder, and Airbnb.</li>
-
+				          <li>QA tested two consumer facing applications: Foursquare <a href="https://foursquare.com/download" class="has-text-info">City Guide</a> and <a href="https://www.swarmapp.com/" class="has-text-info">Swarm</a>, most notably in preparation for iOS 13.</li>
+				          <li>Conducted ad hoc analyses for partner companies utilizing Foursquare location SDK technology, to include Uber, Tinder, and Airbnb.</li>
             </ul>
           </div>
         </div>
@@ -115,11 +115,21 @@
             </div>
           </div>
           <div class="content">
+            <div style="text-align:center">
+              <div class="tooltip"><img src="img/ribbons/arcom.jpg" alt="Army Commendation Medal"><span class="tooltiptext">Army Commendation Medal</span></div>
+              <div class="tooltip"><img src="img/ribbons/gcm.jpg" alt="Good Conduct Medal"><span class="tooltiptext">Army Good Conduct Medal</span></div>
+              <br />
+              <div class="tooltip"><img src="img/ribbons/ndsm.jpg" alt="National Defense Service Medal"><span class="tooltiptext">National Defense Service Medal</span></div>
+              <div class="tooltip"><img src="img/ribbons/gwot.jpg" alt="Global War on Terrorism Service Medal"><span class="tooltiptext">Global War on Terrorism Service Medal</span></div>
+              <div class="tooltip"><img src="img/ribbons/asr.jpg" alt="Army Service Ribbon"><span class="tooltiptext">Army Service Ribbon</span></div>
+              <br />
+              <div style="font-style: italic; font-size: x-small;">(Hover for Effect)</div>
+            </div>
             <ul>
             	<li>Achieved the rank of Specialist (E-4) before being discharged from active duty.</li>
-				<li>Managed a team of three junior communication operators, providing guidance and mentorship by evaluating performance on a monthly basis.</li>
-				<li>Operated and maintained military-grade radios transmitting classified information, in support of <a href="https://en.wikipedia.org/wiki/Operation_Inherent_Resolve" class="has-text-info">Operation Inherent Resolve</a>.</li>
-		    		<li>As a certified <a href="https://en.wikipedia.org/wiki/Combat_lifesaver_course" class="has-text-info">Combat Lifesaver</a>, performed duties as an intermediary medic responsible for administering advanced life support to 120 troops within the company.</li>
+				      <li>Managed a team of three junior communication operators, providing guidance and mentorship by evaluating performance on a monthly basis.</li>
+				      <li>Operated and maintained military-grade radios transmitting classified information, in support of <a href="https://en.wikipedia.org/wiki/Operation_Inherent_Resolve" class="has-text-info">Operation Inherent Resolve</a>.</li>
+		    		  <li>As a certified <a href="https://en.wikipedia.org/wiki/Combat_lifesaver_course" class="has-text-info">Combat Lifesaver</a>, performed duties as an intermediary medic responsible for administering advanced life support to 120 troops within the company.</li>
             </ul>
           </div>
         </div>
@@ -217,9 +227,10 @@
         </p>
 
         <div class="content">
-        	<center><p><a href="https://github.com/stanleylalanne/joytoys">Github</a>
-			<br /> <span class="tag">PHP</span> <span class="tag">MySQL</span> <span class="tag">Bootstrap</span>
-        	</p></center>
+        	<p style="text-align: center;"><a href="https://github.com/stanleylalanne/joytoys">Github</a>
+            <br />
+            <span class="tag">PHP</span> <span class="tag">MySQL</span> <span class="tag">Bootstrap</span>
+        	</p>
         	<ul>
         		<li>A web application created to connect underprivileged children with generous anonymous donors, which an emphasis on gift giving. Wishlists are scraped and parsed using a custom Amazon API.</li>
 				<li>Built in 2.5 days as a submission for the 2019 City University of New York Hackathon.</li>
@@ -245,13 +256,15 @@
         </p>
 
         <div class="content">
-        	<center><p><a href="https://github.com/ricky-shin/bulpa">Github</a>
-        	<br /> <span class="tag">PHP</span> <span class="tag">MySQL</span> <span class="tag">Bootstrap</span>
-        	</p></center>
+          <p style="text-align: center;">
+            <a href="https://github.com/ricky-shin/bulpa">Github</a>
+            <br />
+            <span class="tag">PHP</span> <span class="tag">MySQL</span> <span class="tag">Bootstrap</span>
+        	</p>
         	<ul>
         		<li>A web application that allows users to anonymously submit reviews for courses and professors at Baruch College. These reviews are then pushed and stored on a MySQL database.</li>
-			<li>Reviews are displayed by querying the MySQL database, showing relevant content to users.</li>
-			<li>Over 9,500 pages viewed, with 940+ users submitting 200+ anonymous reviews within 5 months.</li>
+			      <li>Reviews are displayed by querying the MySQL database, showing relevant content to users.</li>
+			      <li>Over 9,500 pages viewed, with 940+ users submitting 200+ anonymous reviews within 5 months.</li>
 
         	</ul>
         </div>
@@ -275,18 +288,15 @@
         </p>
 
         <div class="content">
-        	<center>
-        		<p>
-        	<a href="https://apps.apple.com/us/app/escape-area-51-raid-survival/id1475180053">App Store Link</a>
-        	<br /><span class="tag">Swift</span>
-        	</p>
-        	</center>
+        		<p style="text-align: center;">
+              <a href="https://apps.apple.com/us/app/escape-area-51-raid-survival/id1475180053">App Store Link</a>
+              <br /><span class="tag">Swift</span>
+        	  </p>
         	<ul>
         		<li>Features randomly generated barriers that players must pass through to earn points. The game is over upon colliding with a barrier and the total score earned by the player is uploaded to a leaderboard. Players can retrieve this leaderboard to see where they rank amongst other players.</li>
-				<li>Passed Apple’s stringent review guidelines and published on the iOS App Store.</li>
+				    <li>Passed Apple’s stringent review guidelines and published on the iOS App Store.</li>
         	</ul>
         </div>
-
       </section>
       <footer class="modal-card-foot">
         <button class="button is-success">Close</button>
@@ -300,8 +310,8 @@
   <footer class="footer">
     <div class="content has-text-centered">
       <p>         
-        <a href="#" class="has-text-info">&copy; Ricky Shin</a><br />
-        <i><font size="1">Last Updated: Feb. 29th, 2020</font></i>
+        <a href="#" class="has-text-info">&copy; Ricky Shin</a>
+        <div style="font-style: italic; font-size: x-small;">Last Updated: April 1st, 2020</div>
       </p>
     </div>
   </footer>
