--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="css/main.bundle.css">
-  <link rel="stylesheet" href="css/tooltip.css">
+  <link rel="stylesheet" href="css/personal.css">
   <script src="https://kit.fontawesome.com/4e5a72c756.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153653921-1"></script>
@@ -21,6 +21,11 @@
 </head>
 
 <body>
+<div class="alert">
+  <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+  Currently Looking for Internship Opportunities for Summer 2020! Please e-mail me at <a href="mailto:hi@rickyshin.com" class="has-text-white" style="text-decoration: underline;">hi@rickyshin.com</a>. - 4/1/2020
+</div>
+
   <section class="hero is-primary">
     <div class="hero-body">
       <div class="container">
