--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
 </head>
 
 <body>
+<!-- Announcement Banner -->  
 <div class="alert">
   <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
-  Currently Looking for Internship Opportunities for Summer 2020! Please e-mail me at <a href="mailto:hi@rickyshin.com" class="has-text-white" style="text-decoration: underline;">hi@rickyshin.com</a>. - 4/1/2020
+  Currently Looking for Internship Opportunities for Summer or Fall 2020! Please e-mail me at <a href="mailto:hi@rickyshin.com" class="has-text-white" style="text-decoration: underline;">hi@rickyshin.com</a>. - 4/1/2020
 </div>
 
+<!-- Heading -->  
   <section class="hero is-primary">
     <div class="hero-body">
       <div class="container">
@@ -49,6 +51,7 @@
       </div>
     </div>
   </section>
+  <!-- Education -->  
     <section class="section">
     <div class="container">
       <h1 class="title">Education</h1>
@@ -80,6 +83,7 @@
 
     </div>
   </section>
+  <!-- Relevant Experience -->  
   <section class="section">
     <div class="container">
       <h1 class="title">Relevant Experience</h1>
@@ -141,7 +145,7 @@
       </div>
     </div>
   </section>
-
+<!-- Personal Projects --> 
   <section class="section">
     <div class="container">
       <h1 class="title">Personal Projects</h1>
@@ -177,6 +181,7 @@
         </div>
       </div>
   </section>
+  <!-- Keep in Touch --> 
   <section class="section">
     <div class="container">
       <h1 class="title">Keep in Touch</h1>
@@ -308,10 +313,7 @@
       </footer>
     </div>
   </div>
-
-
-
-
+  <!-- Footer --> 
   <footer class="footer">
     <div class="content has-text-centered">
       <p>         
