--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
           </div>
           <div class="content">
             <div style="text-align:center">
-              <div class="tooltip"><img src="img/ribbons/arcom.png" alt="Army Commendation Medal"><span class="tooltiptext">Army Commendation Medal</span></div>
-              <div class="tooltip"><img src="img/ribbons/gcm.png" alt="Good Conduct Medal"><span class="tooltiptext">Army Good Conduct Medal</span></div>
+              <div class="tooltip"><img src="img/ribbons/arcom.jpg" alt="Army Commendation Medal"><span class="tooltiptext">Army Commendation Medal</span></div>
+              <div class="tooltip"><img src="img/ribbons/gcm.jpg" alt="Good Conduct Medal"><span class="tooltiptext">Army Good Conduct Medal</span></div>
               <br />
-              <div class="tooltip"><img src="img/ribbons/ndsm.png" alt="National Defense Service Medal"><span class="tooltiptext">National Defense Service Medal</span></div>
-              <div class="tooltip"><img src="img/ribbons/gwot.png" alt="Global War on Terrorism Service Medal"><span class="tooltiptext">Global War on Terrorism Service Medal</span></div>
-              <div class="tooltip"><img src="img/ribbons/asr.png" alt="Army Service Ribbon"><span class="tooltiptext">Army Service Ribbon</span></div>
+              <div class="tooltip"><img src="img/ribbons/ndsm.jpg" alt="National Defense Service Medal"><span class="tooltiptext">National Defense Service Medal</span></div>
+              <div class="tooltip"><img src="img/ribbons/gwot.jpg" alt="Global War on Terrorism Service Medal"><span class="tooltiptext">Global War on Terrorism Service Medal</span></div>
+              <div class="tooltip"><img src="img/ribbons/asr.jpg" alt="Army Service Ribbon"><span class="tooltiptext">Army Service Ribbon</span></div>
               <br />
               <div style="font-style: italic; font-size: x-small;">(Hover for Effect)</div>
             </div>
