--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               <div class="tooltip"><img src="img/ribbons/gwot.jpg" alt="Global War on Terrorism Service Medal"><span class="tooltiptext">Global War on Terrorism Service Medal</span></div>
               <div class="tooltip"><img src="img/ribbons/asr.jpg" alt="Army Service Ribbon"><span class="tooltiptext">Army Service Ribbon</span></div>
               <br />
-              <div style="font-style: italic; font-size: x-small;">(Hover for Effect)</div>
+              <div style="font-style: italic; font-size: x-small;">(Hover for Details)</div>
             </div>
             <ul>
             	<li>Achieved the rank of Specialist (E-4) before being discharged from active duty.</li>
