--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
           </div>
           <div class="content">
             <ul>
-            			<li>Working under the Engineering department, improved machine learning models by creating training sets.</li>
+            			<li>Working under the Engineering department, primary duties included data cleansing data used in consumer facing applications and internal analyses.</li>
+				          <li>Working with the Attribution team, conducted ad hoc analyses for partner companies to measure potential foot traffic using Foursquare's Attribution Machine Learning model.</li>
 				          <li>QA tested two consumer facing applications: Foursquare <a href="https://foursquare.com/download" class="has-text-info">City Guide</a> and <a href="https://www.swarmapp.com/" class="has-text-info">Swarm</a>, most notably in preparation for iOS 13.</li>
-				          <li>Conducted ad hoc analyses for partner companies utilizing Foursquare location SDK technology, to include Uber, Tinder, and Airbnb.</li>
             </ul>
           </div>
         </div>
