--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <ul>
               <li>Relevant Coursework:</li>
               <ul>
-              	<li>COMS W1004 - Introduction to Computer Science and Programming in Java (in progress)</li>
+              	<li>COMS W1004 - Introduction to Computer Science and Programming in Java</li>
 		            <li>COMS W4111 - Introduction to Databases</li>
               </ul>
             </ul>
