--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
 
 <body>
 <!-- Announcement Banner -->  
+<!-- 
 <div class="alert">
   <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
   Currently Looking for Internship Opportunities for Summer or Fall 2020! Please e-mail me at <a href="mailto:hi@rickyshin.com" class="has-text-white" style="text-decoration: underline;">hi@rickyshin.com</a>. - 4/1/2020
 </div>
-
+-->
 <!-- Heading -->  
   <section class="hero is-primary">
     <div class="hero-body">
@@ -73,7 +74,9 @@
             <ul>
               <li>Relevant Coursework:</li>
               <ul>
-              	<li>COMS W1004 - Introduction to Computer Science and Programming in Java</li>
+                <li>COMS W1004 - Introduction to Computer Science and Programming in Java</li>
+                <li>COMS W3134 - Data Structures in Java (Fall 2020)</li>
+                <li>COMS W3203 - Discrete Mathematics (Fall 2020)</li>
 		            <li>COMS W4111 - Introduction to Databases</li>
               </ul>
             </ul>
@@ -318,7 +321,7 @@
     <div class="content has-text-centered">
       <p>         
         <a href="#" class="has-text-info">&copy; Ricky Shin</a>
-        <div style="font-style: italic; font-size: x-small;">Last Updated: April 1st, 2020</div>
+        <div style="font-style: italic; font-size: x-small;">Last Updated: May 19th, 2020</div>
       </p>
     </div>
   </footer>
